@@ -1,1 +1,1 @@
-__version__ = '0.8.dev1'
+__version__ = '0.8.dev2'
