@@ -10,13 +10,15 @@ if __name__ == "__main__":
 
     install_requires = ["py", "beautifulsoup4>=4.1.3", "requests",
                         "redis>=2.7.2", "bottle"]
+    if sys.version_info < (2,7):
+        install_requires.append("argparse")
 
     setup(
       name="devpi-server",
       description="devpi-server: reliable fast pypi.python.org caching server",
       keywords="pypi cache server wsgi",
       long_description=README + '\n\n' + CHANGES,
-      version='0.8.dev1',
+      version='0.8.dev2',
       maintainer="Holger Krekel",
       maintainer_email="holger@merlinux.eu",
       packages=find_packages(),
